--- a/src/app/components/auth/login-form/login-form.component.html
+++ b/src/app/components/auth/login-form/login-form.component.html
@@ -22,6 +22,17 @@
     <a href="#" class="login-form__forgot-link">Forgot password ?</a>
   </div>
 
+  <div class="login-form__remember">
+    <label class="login-form__checkbox">
+      <input 
+        type="checkbox" 
+        formControlName="rememberMe" 
+        class="login-form__checkbox-input">
+      <span class="login-form__checkbox-custom"></span>
+      <span class="login-form__checkbox-text">Remember me</span>
+    </label>
+  </div>
+
   <button 
     type="submit" 
     class="login-form__btn login-form__btn--primary"
