add show password

--- a/src/app/components/auth/login-form/login-form.component.html
+++ b/src/app/components/auth/login-form/login-form.component.html
@@ -11,13 +11,33 @@
   </div>
 
   <div class="login-form__field">
-    <input 
-      id="password"
-      type="password" 
-      formControlName="password" 
-      class="login-form__input"
-      [class.login-form__input--error]="getFieldError('password')"
-      placeholder="Password">
+    <div class="login-form__password-container">
+      <input 
+        id="password"
+        [type]="showPassword ? 'text' : 'password'" 
+        formControlName="password" 
+        class="login-form__input login-form__input--password"
+        [class.login-form__input--error]="getFieldError('password')"
+        placeholder="Password">
+      <button 
+        type="button" 
+        class="login-form__password-toggle"
+        (click)="togglePasswordVisibility()"
+        [attr.aria-label]="showPassword ? 'Hide password' : 'Show password'">
+        <span class="login-form__password-icon" [class.login-form__password-icon--visible]="showPassword">
+          <!-- Eye icon for showing password -->
+          <svg *ngIf="!showPassword" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+            <circle cx="12" cy="12" r="3"></circle>
+          </svg>
+          <!-- Eye-off icon for hiding password -->
+          <svg *ngIf="showPassword" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"></path>
+            <line x1="1" y1="1" x2="23" y2="23"></line>
+          </svg>
+        </span>
+      </button>
+    </div>
     <span class="login-form__error" *ngIf="getFieldError('password')">{{ getFieldError('password') }}</span>
     <a href="#" class="login-form__forgot-link">Forgot password ?</a>
   </div>
