add mobile map button

--- a/src/app/components/home/home-page/home-page.component.html
+++ b/src/app/components/home/home-page/home-page.component.html
@@ -172,8 +172,11 @@
     </div>
   </section>
 
-  <!-- Floating Action Button (Mobile) -->
+  <!-- Floating Action Buttons (Mobile) -->
   <div class="home-page__fab">
+    <button class="home-page__fab-btn home-page__fab-btn--secondary" routerLink="/mapa" title="Ver Mapa">
+      <i class="bi bi-map"></i>
+    </button>
     <button class="home-page__fab-btn" routerLink="/criar-evento" title="Criar Evento">
       <i class="bi bi-plus-lg"></i>
     </button>
