--- a/src/app/components/auth/auth-page/auth-page.component.scss
+++ b/src/app/components/auth/auth-page/auth-page.component.scss
@@ -98,8 +98,8 @@
   
   &__profile-name {
     font-size: var(--font-size-base);
-    font-weight: 600;
-    margin-bottom: var(--spacing-xs);
+    font-weight: 600;   
+    margin: 0px; 
     color: var(--white);
   }
   
@@ -107,6 +107,7 @@
     font-size: var(--font-size-sm);
     opacity: 0.7;
     color: var(--white);
+    margin: 0px; 
   }
   
   &__navigation {
