--- a/src/app/components/home/home-page/home-page.component.html
+++ b/src/app/components/home/home-page/home-page.component.html
@@ -14,8 +14,7 @@
             >
           </li>
           <li><a routerLink="/mapa" class="home-page__nav-link">Mapa</a></li>
-          <li><a href="#" class="home-page__nav-link">Experiências</a></li>
-          <li><a href="#" class="home-page__nav-link">Contato</a></li>
+          <li><a href="#" class="home-page__nav-link">Picos</a></li>
         </ul>
 
         <div class="home-page__nav-actions">
