--- a/src/app/components/picos/picos-list/picos-list.component.html
+++ b/src/app/components/picos/picos-list/picos-list.component.html
@@ -1,9 +1,14 @@
 <div class="picos-list-container">
   <div class="header">
     <h1>Picos</h1>
-    <a routerLink="/adicionar-pico" class="btn-add-pico">
-      <i class="bi bi-plus-lg"></i> Adicionar Pico
-    </a>
+    <div class="header-actions">
+      <a routerLink="/mapa-picos" class="btn-map-picos">
+        <i class="bi bi-map"></i> Mapa de Picos
+      </a>
+      <a routerLink="/adicionar-pico" class="btn-add-pico">
+        <i class="bi bi-plus-lg"></i> Adicionar Pico
+      </a>
+    </div>
   </div>
 
   <div class="filters">
